--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Ll]ogs/
 # Visual Studio 2015-2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
