--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ bld/
 [Ll]og/
 [Ll]ogs/
 *.rtf
+*.txt
 # Visual Studio 2015-2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
