--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Pp]ythonFiles/*.py
 *.rtf
 *.txt
+
 # Visual Studio 2015-2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
