--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,10 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
-[Pp]ythonFiles/**/*.py
+![Pp]ythonFiles/**/*.py
 *.rtf
 *.txt
+*.py
 
 # Visual Studio 2015-2017 cache/options directory
 .vs/
