--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,13 @@ bld/
 [Ll]og/
 [Ll]ogs/
 /[Pp]ythonFiles/*.py
-/[Bb]ranch_lesson/*.txt
+5/*.jpg
+6/*.jpg
+7/*.jpg
+8/*.jpg
+9/*.jpg
+10/*.jpg
+
 *.rtf
 *.py
 
